--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.17",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@vercel/analytics": "^0.1.8",
+    "@next/font": "14.2.15",
+    "@types/node": "24.9.2",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
-    "flowbite": "^1.5.5",
-    "framer-motion": "^8.1.3",
-    "mixpanel-browser": "^2.45.0",
-    "next": "13.1.1",
-    "next-seo": "^5.15.0",
-    "nextjs-google-analytics": "^2.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "tw-elements": "^1.0.0-alpha13",
-    "typescript": "4.9.4"
+    "eslint": "9.38.0",
+    "eslint-config-next": "16.0.1",
+    "flowbite": "^3.1.2",
+    "framer-motion": "^12.23.24",
+    "mixpanel-browser": "^2.71.0",
+    "next": "^16.0.1",
+    "next-seo": "^7.0.1",
+    "nextjs-google-analytics": "^2.3.7",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "tw-elements": "^2.0.0",
+    "typescript": "5.9.3"
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^15.5.5",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
