--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "5.9.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
